--- a/src/app/features/account/account.component.html
+++ b/src/app/features/account/account.component.html
@@ -31,9 +31,9 @@
             class="form-control"
           />
           @if (firstName && firstName.invalid && (firstName.dirty || firstName.touched)) {
-            <div class="alert alert-danger">
+            <div class="alert-danger small">
               @if (firstName.hasError('required')) {
-                <div>Name is required.</div>
+                <div>First name is required.</div>
               }
             </div>
           }
@@ -48,10 +48,27 @@
             formControlName="lastName"
             required
           />
+           @if (lastName && lastName.invalid && (lastName.dirty || lastName.touched)) {
+            <div class="alert-danger small">
+              @if (lastName.hasError('required')) {
+                Last name is required.
+              }
+            </div>
+          }
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email: </label>
           <input id="email" type="text" class="form-control" formControlName="email" required />
+           @if (email && email.invalid && (email.dirty || email.touched)) {
+            <div class="alert-danger small">
+              @if (email.hasError('required')) {
+                <div>Email is required.</div>
+              }
+              @if (email.hasError('email')) {
+                <div>Email is invalid.</div>
+              }
+            </div>
+          }
         </div>
 
         <div class="mb-3">
@@ -91,6 +108,13 @@
                     id="{{ i }}"
                   />
                   <label class="form-check-label" for="{{ i }}">{{ someOptions[i] }}</label>
+                </div>
+              }
+               @if (options && options.invalid && (options.dirty || options.touched)) {
+                <div class="alert-danger small">
+                  @if (options.hasError('required')) {
+                    <div>Options are required.</div>
+                  }
                 </div>
               }
             </div>
