--- a/src/app/features/books/book.component.html
+++ b/src/app/features/books/book.component.html
@@ -1,6 +1,10 @@
 <div class="d-flex flex-column">
   <h2>Books</h2>
-  <app-book-list class="book-list" [books]="(books$ | async)!" (add)="onAdd($event)"></app-book-list>
+  <app-book-list
+    class="book-list"
+    [books]="(books$ | async)!"
+    (add)="onAdd($event)"
+  ></app-book-list>
 
   <h2>My Collection</h2>
   <app-book-collection
