text de description

--- a/src/app/features/account/account.component.html
+++ b/src/app/features/account/account.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column">
   <h1>Account page</h1>
   <div class="alert alert-primary" role="alert">
-    User form. Send and retreive data with @ngrx/entity. It also contains a link to a more detailed
+    User form. Send and retreive data with @ngrx/entity. follow this link to have more detailed
     presentation off a single user profile.
     <a class="icon-link" href="/account-details/{{ id }}">
       User account details
@@ -14,7 +14,7 @@
   </div>
 
   <div class="alert alert-primary" role="alert">
-    createAction - Reducers (handle transitions from one state to the next state)
+    Signals (handle transitions from one state to the next state)
   </div>
 
   <div class="grid">
