--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<h1>{{ content()?.presentation }}</h1>
+<p>{{ content()?.introduction }}</p>
+<p>{{ content()?.description }}</p>
