Resolvers in routes prefetch data before rendering

--- a/src/app/features/account/details/account-details.component.html
+++ b/src/app/features/account/details/account-details.component.html
@@ -38,7 +38,7 @@
 <div class="mb-3"></div>
 <div class="mb-3"></div>
 
-@if (items; as items) {
+@if (content()?.['content']; as items) {
   <div class="alert alert-primary" role="alert">
     Accordion block. <strong>Custom made with @angular</strong> component and css keyframes.
   </div>
