--- a/src/app/features/unsplash/unsplash.html
+++ b/src/app/features/unsplash/unsplash.html
@@ -1,1 +1,33 @@
 <p>unsplash works!</p>
+
+<div>
+  <h2>List of photos</h2>
+
+  <div class="photo-collection">
+    @for (photo of unsplashResults$ | async; track photo.id) {
+      <div class="card" style="width: 18rem">
+        <img src="{{ photo.urls.raw }}" class="card-img-top" alt="{{ photo.alt_desctiption }}" />
+        <div class="card-body">
+          @if (photo.description) {
+            <h5 class="card-title">{{ photo.description }}</h5>
+          } @else {
+            <h5 class="card-title">No title</h5>
+          }
+
+          <p class="card-text">{{ photo.user.name }}</p>
+          <p class="card-text">{{ photo.description }}</p>
+          <p class="card-text">{{ photo.updated_at }}</p>
+          <a href="#" class="btn btn-primary">View</a>
+        </div>
+      </div>
+    }
+  </div>
+
+  @if (loading$ | async) {
+    <div>Loading...</div>
+  }
+
+  @if (error$ | async) {
+    <div>Error: {{ error$ | json }}</div>
+  }
+</div>
