--- a/src/app/features/unsplash/unsplash.scss
+++ b/src/app/features/unsplash/unsplash.scss
@@ -5,4 +5,23 @@
   align-content: flex-start;
   justify-content: space-between;
   align-items: flex-start;
+
+  &_thumb {
+    height: 150px;
+    width: 100%;
+    position: relative;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: none;
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+
+  &_header {
+    z-index: 1000;
+    position: relative;
+  }
 }
