Canvas dashbord suite

--- a/src/app/features/dashbord/dashboard.html
+++ b/src/app/features/dashbord/dashboard.html
@@ -1,1 +1,15 @@
 <p>dashbord works!</p>
+ <div class="alert alert-primary" role="alert">
+    Building custom html5 canvas charts 
+  </div>
+
+<canvas id="canvasRepli" width="500" height="250" style="display: none">
+  dessin indisponible
+</canvas>
+
+<div class="canvasArea">
+    <div id="canvasArea_left"></div>
+    <div id="canvasArea_main"></div>
+    <div id="canvasArea_bottom"></div>
+</div>
+
